[package]
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]
name = "tabin-plugins"
version = "0.2.3"
description = "Libs for building nagios-compatible check scripts, some scripts, and some libs to read from /proc and /sys on Linux. "
documentation = "http://quodlibetor.github.io/tabin-plugins/doc/tabin_plugins/index.html"
homepage = "https://github.com/quodlibetor/tabin-plugins"
repository = "https://github.com/quodlibetor/tabin-plugins"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["linux", "pseudo-fs", "nagios"]

[dependencies]
bitflags = "0.3.3"
chrono = "0.2"
clippy = {version = "0.0.61", optional = true}
docopt = "0.6"
hyper = "0.10"
itertools = "0.4"
lazy_static = "0.1"
libc = "0.1.12"
nix = "^0.4.2"
regex = "0.1"
rustc-serialize = "0.3"
scan_fmt = "0.1"
url = "0.2"
wrapped_enum = "0.1"

[dependencies.clap]
default-features = false
features = ["suggestions"]
version = "1.3"

[features]
default = []
