[package]
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]
name = "tabin-plugins"
version = "0.3.0"
description = "Libs for building nagios-compatible check scripts, some scripts, and some libs to read from /proc and /sys on Linux. "
documentation = "http://quodlibetor.github.io/tabin-plugins/doc/tabin_plugins/index.html"
homepage = "https://github.com/quodlibetor/tabin-plugins"
repository = "https://github.com/quodlibetor/tabin-plugins"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["linux", "pseudo-fs", "nagios"]

[dependencies]
bitflags = "1.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.8"
itertools = "0.7"
lazy_static = "0.2"
libc = "0.2"
nix = "0.9"
regex = "0.2"
reqwest = "0.8"
scan_fmt = "0.1.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
structopt = "0.2"
url = "1.6"
wrapped_enum = "0.1"

[dependencies.clap]
default-features = false
features = ["suggestions", "color"]
version = "2"

[features]
default = []
