[package]
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]
description = "Libs for building nagios-compatible check scripts, some scripts, and some libs to read from /proc and /sys on Linux. "
documentation = "http://quodlibetor.github.io/tabin-plugins/doc/tabin_plugins/index.html"
homepage = "https://github.com/quodlibetor/tabin-plugins"
keywords = ["linux", "pseudo-fs", "nagios"]
license = "BSD-3-Clause"
name = "tabin-plugins"
readme = "README.md"
repository = "https://github.com/quodlibetor/tabin-plugins"
version = "0.3.1"
edition = "2018"

[dependencies]
bitflags = "1.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.8"
env_logger = "0.5.9"
itertools = "0.7"
lazy_static = "0.2"
libc = "0.2"
log = "0.4.1"
nix = "0.9"
regex = "0.2"
reqwest = "0.8"
scan_fmt = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.2"
url = "1.6"
wrapped_enum = "0.1"

[dependencies.clap]
default-features = false
features = ["suggestions", "color"]
version = "2"

[features]
default = []
