[package]
name = "turbine-plugins"
version = "0.1.1"
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]

[dependencies]
chrono = "0.2"
docopt = "0.6"
hyper = "0.6"
regex = "0.1"
rustc-serialize = "0.3"
scan_fmt = "0.1"
wrapped_enum = "*"

[dependencies.clap]
version = "1.3"
default-features = false
features = ["suggestions"]


[dev-dependencies]
passert = "0.2"
passert_macros = "0.2"
