[package]
name = "turbine-plugins"
version = "0.1.1"
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]

[dependencies]
chrono = "0.2"
docopt = "0.6"
hyper = "0.6"
itertools = "0.4"
lazy_static = "0.1"
libc = "0.1"
regex = "0.1"
rustc-serialize = "0.3"
scan_fmt = "0.1"
url = "0.2"
wrapped_enum = "0.1"

[dependencies.clap]
version = "1.3"
default-features = false
features = ["suggestions"]
